--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,19 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tailwindcss/postcss": "^4.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
-    "@reduxjs/toolkit": "^1.9.5"
+    "react-redux": "^8.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^4.0",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
